<resources>
    <string name="app_name">Infinity Crop</string>
    <string name="name_item_list_home">Inicio</string>
    <string name="name_item_list_climas">Climas</string>
    <string name="name_item_list_guia_botanica">Jardín</string>
    <string name="name_item_list_perfil">Perfil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tutorial_titulo1">Bienvenido</string>
    <string name="tutorial_titulo2">Tus máquinas</string>
    <string name="tutorial_titulo3">Controla tu máquina</string>
    <string name="tutorial_titulo4">Tus climas</string>
    <string name="tutorial_titulo5">Nuestro equipo</string>
    <string name="tutorial_parrafo1">Te damos las gracias por confiar en nosotros, estamos encantados de acompañarte durante todo el cuidado de tus cultivos</string>
    <string name="tutorial_parrafo2">Escanea tantas máquinas de cultivo como desees de forma cómoda con su código QR correspondiente para poder utilizarla</string>
    <string name="tutorial_parrafo3">Supervisa el crecimiento y desarrollo de tus plantas en todo momento para evitar imprevistos</string>
    <string name="tutorial_parrafo4">Elije los climas adecuados para cada tipo de cultivo para mejorar su eficiencia de forma fácil y sencilla</string>
    <string name="tutorial_parrafo5">Prepárate para formar parte de nuestra familia comentando en el foro y compartiendo contenido con el resto de miembros</string>
    <string name="boton_skip">SALTAR</string>
    <string name="boton_skip_final">EMPIEZA</string>
    <string name="txtLogIntro">Sostenibilidad a tu alcance</string>
    <string name="btniniciosesion">INICIAR SESIÓN</string>
    <string name="btn_login_google">Iniciar sesión con Google</string>
    <string name="btn_register">Regístrate</string>
    <string name="text_login_cuenta">¿Ya tienes una cuenta?</string>
    <string name="btn_txt_sign_in">Iniciar sesión</string>
    <string name="btn_create_account">Crear cuenta</string>
    <string name="btn_register_google">Regístrate con Google</string>
    <string name="text_tittle_register">Regístrate en Infinity Crop</string>
    <string name="text_tittle_dialog_mail_verification">Verifica tu cuenta</string>
    <string name="text_subtitle_dialog_mail_verification">El enlace de activación de la cuenta se ha enviado cuando te has registrado a la dirección de correo electrónico que proporcionó.</string>
    <string name="btn_send_verification_dialog_mail_verification">¿No recibió el correo? Enviarlo de nuevo</string>
    <string name="txtLogEmail">Correo electrónico</string>
    <string name="txtPass">Contraseña</string>
    <string name="txt_register_in_IC">Registrarse en Infinity Crop</string>
    <string name="txtregsection">Nuevo usuario</string>
    <string name="txtregbienvenida">Te damos la bienvenida a Infinity Crop</string>
    <string name="txtregbienvenida2">Rellena los siguientes campos para continuar</string>
    <string name="txtregEmail">Correo electrónico</string>
    <string name="txtregUsername">Nombre de usuario</string>
    <string name="txtregName">Nombre y apellidos</string>
    <string name="txtregPass">Contraseña</string>
    <string name="txt_myMachine">Mis máquinas ></string>
    <string name="playlist_all">Todas</string>
    <string name="edit_item">Editar nombre</string>
    <string name="delete_item">Eliminar</string>
    <string name="addFavorite_item">Añadir a favoritos</string>
    <string name="quitFavorite_item">Quitar de favoritos</string>
    <string name="addList_item">Añadir a la lista</string>
    <string name="deleteText_dialog">Eliminar la maquina?</string>
    <string name="cancelButton_dialog">Cancelar</string>
    <string name="deleteConfirmButton_dialog">Eliminar</string>
    <string name="user_name">Nombre Usuario</string>
    <string name="communities">COMUNIDADES</string>
    <string name="posts">PUBLICACIONES</string>
    <string name="photos_tabItem">Fotos</string>
    <string name="communities_tabItem">Actividad</string>
    <string name="climates_tabItem">Climas</string>
    <string name="empty_primary_text">No hay ninguna máquina todavía</string>
    <string name="empty_secondary_text">Siéntase libre de agregar uno, sólo toque el botón de abajo o deslice hacia abajo para actualizar la lista</string>
    <string name="login_introduce_nombre">"Introduce un nombre válido"</string>
    <string name="login_introduce_username">"Introduce un nombre de usuario válido"</string>
    <string name="login_introduce_username_exists">"El nombre de usuario ya existe"</string>
    <string name="login_introduce_correo">"Debes introducir tu correo"</string>
    <string name="login_introduce_correo_ok">"Introduce un correo valido"</string>
    <string name="login_introduce_contra">"Introduce una contraseña valida"</string>
    <string name="login_introduce_contra_ok">"La contraseña debe contener al menos 6 carácteres"</string>
    <string name="login_introduce_correo_pass">"Debes introducir tu correo para cambiar la contraseña"</string>
    <string name="login_revisa_correo">"Revisa tu correo para cambiar tu contraseña."</string>
    <string name="login_mail_not_registered">"Correo no registrado en Infinity Crop."</string>
    <string name="login_verifica_correo">"Correo de verificación enviado, revisa tu correo de la cuenta."</string>
    <string name="login_verifica_correo_error">"Error al enviar el correo de verificación, pruebe más tarde."</string>
    <string name="login_iniciando_sesion">"Has iniciado sesión como "</string>
    <string name="login_contenido_en_linea">"Obteniendo contenido en línea..."</string>
    <string name="login_usuario_ya_existente">"Este usuario ya existe."</string>
    <string name="login_no_se_puede_registrar">"No se puede registrar este usuario."</string>
    <string name="login_datos_incorrectos">"Los datos introducidos no son correctos."</string>
    <string name="login_error_envio_correo">"Error en el envío de correo"</string>
    <string name="login_error">"Error, prueba de nuevo"</string>
    <string name="login_error_select_profile">"Selecciona tu perfil"</string>
    <string name="login_error_imagen">"Imagen no seleccionada"</string>
    <string name="login_actualizando_profile">"Actualizando perfil"</string>
    <string name="te_damos_la_bienvenida">Te damos la bienvenida</string>
    <string name="inicia_sesi_n">Inicia sesión</string>
    <string name="no_tienes_cuenta_registrate_aqu">¿No tienes cuenta? Registrate aquí</string>
    <string name="email">Email</string>
    <string name="contrase_a">Contraseña</string>
    <string name="he_olvidado_mi_contrase_a">¿Has olvidado tu contraseña?</string>
    <string name="tienes_una_cuenta">¿Tienes una cuenta?</string>
    <string name="eres_nuevo_reg_strate_aqu">¿Eres nuevo? Regístrate aquí</string>
    <string name="o">O</string>
    <string name="hola_te_damos_la_bienvenida">Hola, ¡Te damos la bienvenida!</string>
    <string name="aqu_empezar_s_tus_primeros_pasos_con_nosotros">Aquí empezarás tus primeros pasos con nosotros</string>
    <string name="selecciona_una_foto">Selecciona una foto</string>
    <string name="nombre">Nombre</string>
    <string name="correo">Correo</string>
    <string name="registrarse">Registrarse</string>
    <string name="tienes_una_cuenta_inicia_sesi_n">¿Tienes una cuenta? Inicia sesión</string>
    <string name="title_access_google">Acceder con google</string>
    <string name="btn_txt_access_google">Continuar</string>
    <string name="tittle_newMachine">Nueva máquina</string>
    <string name="subtittle_newMachine">Pasos para añadir una nueva máquina</string>
    <string name="body_newMachine">Necesitamos verificar su información de la maquina.</string>
    <string name="body2_newMachine">Por favor siga los pasos de abajo para procesar su máquina.</string>
    <string name="step1_newMachine">Paso 1</string>
    <string name="step2_newMachine">Paso 2</string>
    <string name="step3_newMachine">Paso 3</string>
    <string name="step3_modelText_newMachine">Modelo:</string>
    <string name="step1Text_newMachine">Escanear código QR</string>
    <string name="step2Text_newMachine">Añadir información</string>
    <string name="step3Text_newMachine">Comprobar datos</string>
    <string name="step2tittle_bottom_sheet">Nombre de la máquina</string>
    <string name="step2checkbox_bottom_sheet">Agregar a la lista de favoritos</string>
    <string name="step2input_text_bottom_sheet">Nombre</string>
    <string name="step3tittle_bottom_sheet">Verificación de los datos</string>
    <string name="step3image_state">Estado</string>
    <string name="step3_empty">Paso no completado</string>
    <string name="step3_favorite">Favoritos</string>
    <string name="step3_favorite_yes">Si</string>
    <string name="step3_favorite_no">No</string>
    <string name="snack_close">Cerrar</string>
    <string name="snack_no_internet">Internet no disponible, Comprueba tu conexión y prueba de nuevo.</string>
    <string name="snack_yes_internet">Vuelves a tener conexion a Internet.</string>
    <string name="snack_machine_exists">Esta máquina ya ha sido registrada antes en nuestra base de datos.</string>
    <string name="snack_steps_remain">Faltan pasos por hacer.</string>
    <string name="snack_qr_error">El QR no es oficial de Infinity Crop.</string>
    <string name="snack_machine_favorite">Máquina guardada en tus favoritos.</string>
    <string name="snack_machine_quit_favorite">Máquina quitada de tus favoritos.</string>
    <string name="snack_clima_favorite">Clima guardado en tus favoritos.</string>
    <string name="snack_clima_quit_favorite">Clima quitado de tus favoritos.</string>
    <string name="snack_machine_delete">Se ha eliminado la máquina.</string>
    <string name="snack_playlist_add">Máquina guardada en la lista</string>
    <string name="snack_playlist_already_favorite">Esta máquina ya está en favoritos.</string>
    <string name="snack_playlist_document_playlist_exists">Esta máquina ya está en la lista</string>
    <string name="snack_machine_edit_name">Máquina actualizada correctamente.</string>
    <string name="error_empty_editext">Introduce un nombre válido</string>
    <string name="error_a_lot_text_editext">Introduce un nombre válido</string>
    <string name="error_name_exists">El nombre ya existe en tu lista de maquinas</string>
    <string name="error_empty_editext_list">Introduce un título válido</string>
    <string name="error_a_lot_text_editext_list">Introduce un título válido</string>
    <string name="error_name_exists_list">La lista ya existe, introduce uno diferente</string>
    <string name="mis_climas">Mis climas</string>
    <string name="climas_de_infinitycrop">Climas de InfinityCrop</string>
    <string name="climas_de_la_comunidad">Climas de la comunidad</string>
    <string name="explorar_climas">Explorar Climas</string>
    <string name="nuevos">Nuevos</string>
    <string name="guardado">Guardado</string>
    <string name="top">Top</string>
    <string name="buscar">Buscar</string>
    <string name="categorias">Categorías</string>
    <string name="txt_mas">MÁS</string>
    <string name="title_empty_climate_recycler">No se ha encontrado ningún clima</string>
    <string name="subtitle_empty_climate_infinity_recycler">Soluciones: Refresca la pagina deslizando hacia abajo, comprueba tu conexión a internet o reinicia la aplicación.</string>
    <string name="add_list_dialog_tittle">Añadir a lista de máquinas</string>
    <string name="add_list_dialog_subtittle">Todas las listas de máquinas</string>
    <string name="add_list_dialog_btn_text">Nueva lista</string>
    <string name="add_list_dialog_empty_playlist">VACÍO</string>
    <string name="add_list_dialog_more_playlist">máquinas</string>
    <string name="add_list_dialog_one_playlist">máquina</string>
    <string name="create_list_dialog_tittle">Crear lista</string>
    <string name="create_list_dialog_input_text">Título</string>
</resources>