<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.log.activity_log_start"
    android:background="@color/white"
    android:padding="30dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtLogIntro"
            android:textSize="27sp"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_bold"
            android:layout_marginBottom="15dp"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/te_damos_la_bienvenida"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto"
            android:layout_marginBottom="40dp"
            />


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/log"
            app:layout_constraintVertical_bias="0.561"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/data" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            >

            <Button
                android:id="@+id/loginact"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/button_color"
                android:drawableLeft="@drawable/ic_mail_icon"
                android:text="@string/inicia_sesi_n"
                android:textColor="@color/black"

                android:textSize="13dp" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                />


        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="#0000"
            android:text="@string/no_tienes_cuenta_registrate_aqu"
            android:textColor="@color/black"/>
    </LinearLayout>

</ScrollView>